# offboard_detector

./: CMakeLists.txt
launch/: offboard_detector_real.launch.py  offboard_detector_sitl.launch.py
offboard_detector/: CMakeLists.txt  package.xml
offboard_detector/msg/: DetectorOutput.msg
offboard_detector/src/: gz_true_pos_pub.cpp
scripts/: observer_detector.py  observer_detector_exp.py  observer_detector_real.py  observer_detector_sim.py  observer_detector_sitl.py
src/: gz_true_pos_pub.cpp
